[refactor] state를 LinkedList로 변경